Checkout table and css restructure

--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="@Assets["css/specific.css"]" />
     <link rel="stylesheet" href="@Assets["css/responsive.css"]" />
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-    @* <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" /> *@
+    <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" />
     <ImportMap />
     <HeadOutlet />
 </head>
