--- a/WebshopFrontend/Components/Components/CartIcon.razor
+++ b/WebshopFrontend/Components/Components/CartIcon.razor
@@ -4,8 +4,8 @@
 @inject NotifyCartUpdated NotifyCartUpdated
 @implements IDisposable
 
-<NavLink href="checkout" class="text-gray cart">
-    <div>
+<NavLink href="checkout" class="text-gray">
+    <div class="cart">
         <i class="fa badge fa-lg" style="font-size: 24px;" value="@_noOfItemsInCart">&#xf07a;</i>
     </div>
 </NavLink>
