--- a/WebshopFrontend/Components/Components/ProductDetails.razor
+++ b/WebshopFrontend/Components/Components/ProductDetails.razor
@@ -1,4 +1,4 @@
-﻿<div class="product-grid-item-4 padding-x padding-y">
+﻿<div class="product-grid-item-description padding-x padding-y">
     <hr/>
     <GameProperties Boardgame="@Boardgame"></GameProperties>
     <hr/>
