--- a/WebshopFrontend/Components/Components/ProductHeading.razor
+++ b/WebshopFrontend/Components/Components/ProductHeading.razor
@@ -1,4 +1,4 @@
-﻿<div class="product-grid-item-1 padding-x padding-y">
+﻿<div class="product-grid-item-product padding-x padding-y">
     <h1>@Boardgame.Name</h1>
     <hr/>
     <div class="text-gray">
