--- a/WebshopFrontend/Components/Components/ProductImages.razor
+++ b/WebshopFrontend/Components/Components/ProductImages.razor
@@ -1,4 +1,4 @@
-﻿<div class="product-grid-item-2 padding-x padding-y">
+﻿<div class="product-grid-item-image padding-x padding-y">
     <img src="@Boardgame.Image.ImageMediumUrl" alt="@Boardgame.Image.ImageText" @onclick="ShowHideLargeImage" />
 
     <div class="overlay" style="@DisplayStyle" @onclick="ShowHideLargeImage">
