--- a/WebshopFrontend/Components/Components/ProductPrice.razor
+++ b/WebshopFrontend/Components/Components/ProductPrice.razor
@@ -1,6 +1,6 @@
 ﻿@using WebshopFrontend.Components.Components
 
-<div class="product-grid-item-3 padding-x padding-y">
+<div class="product-grid-item-price padding-x padding-y">
     @if (Boardgame.Price.Discount != null)
     {
         <div>
