--- a/WebshopFrontend/Components/Components/ProductStock.razor
+++ b/WebshopFrontend/Components/Components/ProductStock.razor
@@ -1,4 +1,4 @@
-﻿<div class="product-grid-item-6 padding-x padding-y">
+﻿<div class="product-grid-item-stock padding-x padding-y">
     <span>Stock: @Boardgame.Stock.Quantity</span>
     @if (Boardgame.Stock.NextRestock == null)
     {
