--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -2,166 +2,6 @@
     color: black;
 }
 
-.badge:after {
-    content: attr(value);
-    font-size: 14px;
-    color: white;
-    background: gray;
-    border-radius: 10%;
-    padding: 3px 3px;
-    position: relative;
-    left: -50px;
-    top: -4px;
-}
-
-.badge span {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.button-block {
-    width: 100%;
-    display: block;
-    cursor: pointer;
-    text-decoration: none;
-    border-radius: 2px;
-}
-
-.button-buy {
-    background-color: rgb(76, 180, 76);
-    color: white;
-}
-
-    .button-buy:hover {
-        background-color: rgb(56, 160, 56);
-    }
-
-.button-reserve {
-    background-color: rgb(255, 165, 0);
-    color: white;
-}
-
-    .button-reserve:hover {
-        background-color: rgb(255, 145, 0);
-    }
-
-.cart {
-    transition: 0.2s;
-}
-
-    .cart:hover {
-        background-color: rgb(212, 212, 212);
-        color: black;
-    }
-
-.checkout-table-container {
-    overflow-x: auto;
-}
-
-.checkout-table {
-    width: 100%;
-    background: white;
-    text-align: left;
-    border-collapse: collapse;
-}
-
-    .checkout-table th {
-        height: 50px;
-    }
-
-    .checkout-table td {
-        padding-top: 8px;
-        padding-bottom: 8px;
-    }
-
-    .checkout-table tfoot th {
-        text-align: right;
-    }
-
-    .checkout-table th, .checkout-table td {
-        border-bottom: 1px solid #d9d9d9;
-    }
-
-.content {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1200px;
-    padding-left: 8px;
-    padding-right: 8px;
-    width: 100%;
-}
-
-.game-properties {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.main {
-    margin-left: 0;
-    transition: margin-left .4s;
-    width: 100%;
-}
-
-.middle-top-bar {
-    border-top: 1px solid #d9d9d9;
-    border-bottom: 1px solid #d9d9d9;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-
-.nav-menu {
-    display: block;
-    overflow: hidden;
-}
-
-
-
-.nav-item {
-    width: 250px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    border: 1px solid #ededed;
-    transition: 0.1s;
-}
-
-    .nav-item a {
-        background: inherit;
-        color: inherit;
-    }
-
-    .nav-item:hover {
-        background-color: rgb(212, 212, 212);
-        color: black;
-    }
-
-.nav-menu-icon {
-    width: 37px;
-}
-
-.nav-menu-close {
-    display: flex;
-    justify-content: end;
-}
-
-.nav-menu-close-button {
-    color: gray;
-    font-size: 30px;
-    font-weight: bold;
-    transition: 0.1s;
-    align-self: end;
-}
-
-    .nav-menu-close-button:hover {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
 .overlay {
     position: fixed;
     display: none;
@@ -200,125 +40,11 @@
         cursor: pointer;
     }
 
-
-.product-flex-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.product-flex-item {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 50%;
-    max-width: 50%;
-    border: 1px solid #ededed;
-}
-
-.product-preview-bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.product-grid-container {
-    width: 100%;
-    display: grid;
-    grid-template-areas:
-        "product"
-        "image"
-        "description"
-        "price"
-        "stock";
-    grid-template-columns: auto;
-    grid-template-rows: 80px auto auto auto auto;
-    border: 1px solid #ededed;
-}
-
 [class^="product-grid-item"] {
     background: white;
 }
 
-.product-grid-item-1 {
-    grid-area: product;
-}
-
-.product-grid-item-2 {
-    grid-area: image;
-}
-
-.product-grid-item-3 {
-    grid-area: price;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-}
-
-.product-grid-item-4 {
-    grid-area: description;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-}
-
-.product-grid-item-6 {
-    grid-area: stock;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
-}
-
-.root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-
-.sidebar {
-    width: 250px;
-    display: none;
-    overflow: auto;
-    position: fixed;
-    flex-shrink: 0;
-    z-index: 3;
-    top: 81px;
-    border: 1px solid #ededed;
-}
-
-.top-bar {
-    height: 32px;
-}
-
-.top-menu {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-
-.top-menu-search {
-    flex-grow: 1;
-    position: relative;
-}
-
-.top-menu-menu {
-    display: flex;
-    align-items: center;
-    transition: 0.1s
-}
-
-    .top-menu-menu img {
-        width: 25px;
-        height: 25px;
-    }
-
-    .top-menu-menu:hover {
-        color: black;
-    }
-
-
-.top-menu-nav-item {
+/*.top-menu-nav-item {
     cursor: pointer;
     background-color: inherit;
     color: inherit;
@@ -329,4 +55,4 @@
     .top-menu-nav-item:hover {
         background-color: gray;
         color: black;
-    }
+    }*/
