--- a/WebshopFrontend/Components/Components/ProductPreview.razor
+++ b/WebshopFrontend/Components/Components/ProductPreview.razor
@@ -9,7 +9,7 @@
 
         <div class="product-preview-bottom">
             <div>
-                <Price RegularPrice="Boardgame.Price.Regular" DiscountedPrice="Boardgame.Price.Discount?.Price" FontSizePx="15"></Price>
+                <Price Boardgame="Boardgame" FontSizePx="15"></Price>
             </div>
 
             <div>
