--- a/WebshopFrontend/Components/Components/ProductPrice.razor
+++ b/WebshopFrontend/Components/Components/ProductPrice.razor
@@ -13,7 +13,7 @@
         </div>
     }
     <div>
-        <Price RegularPrice="@Boardgame.Price.Regular" DiscountedPrice="@Boardgame.Price.Discount?.Price" FontSizePx="40"></Price>
+        <Price Boardgame="Boardgame" FontSizePx="40"></Price>
     </div>
 
     <AddToCartButton Boardgame="@Boardgame"></AddToCartButton>
