--- a/WebshopFrontend/wwwroot/css/general.css
+++ b/WebshopFrontend/wwwroot/css/general.css
@@ -19,6 +19,10 @@
     position: absolute;
 }
 
+.validation-message {
+    color: red;
+}
+
 .gray {
     background-color: rgb(242, 242, 242);
     color: black;
